# partdb-kicad-plugin

./: .gitignore  README.md  UI_test.py  __init__.py  hello.py  plugin.py  push_project.py  pyproject.toml  pyrightconfig.json  requirements.txt
partdb/: api.py  part.py
