[project]
name = "partdb-kicad-plugin"
version = "0.1.0"
description = "Kicad plugins to connect PartDB"
readme = "README.md"
requires-python = "==3.9.13"
dependencies = []
license = {text = "GPL-3.0"}


[build-system]
requires = ["hatchling", "hatch-kicad"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "plugin.py",
    "kicad_advanced",
    "partdb",
    "resources",
    "__init__.py",
    "icon.png"
]

[tool.hatch.build.targets.kicad-package]
name = "PartDB ActionPlugin"
description = "Sync storage location"
description_full = "Sync storage location"
identifier = "com.github.saschathiergart.partdb-kicad-plugin"
author = {name = "Sascha Thiergart"}
status = "development"
kicad_version = "9.0.5"
icon = "resources/icon.png"

[tool.pyright]
reportMissingTypeStubs = false
